<resources>
    <string name="app_name">MERCADOÑA</string>
    <string name="title_activity_login">Inicio de Sesion</string>
    <string name="Registrate">Registrate Aqui</string>
    <string name="Boton_Registro_Usuarios"> Registro de Usuarios </string>
    <string name="Boton_Registro_Tiendas"> Registro de Tiendas </string>
    <string name="Cuenta">Aún no tienes Cuenta?</string>
    <string name="Nombre_Usuario">Nombre de Usuario</string>
    <string name="Nombre_Vendedor">Nombre de Vendedor</string>
    <string name="Slogan">Compra y Recoge Tu Pedido</string>
    <string name="SeleccionarDistrito">Seleccione su Distrito</string>
    <string name="SeleccionarDistrito1">Seleccione Ubicacion de Tienda</string>
    <string name="SeleccionarMercado">Seleccione Mercado </string>
    <string name="SeleccionarRubro">Seleccione Rubro </string>
    <string name="Apellidos">Apellidos</string>
    <string name="prompt_email">Correo Electrónico </string>
    <string name="prompt_email1">Confirmar Correo Electrónico </string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password1">Confirmar Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">No es un nombre de usuario válido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_mercado_principal">MercadoPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">MERCADOÑA</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_navigation_mercado">NavigationMercado</string>
    <string name="inicio">Inicio</string>
    <string name="title_activity_principal_mercado">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="productos">Productos</string>
    <string name="favoritos">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>